Fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -52,12 +52,26 @@ body {
 .box {
   width: 42rem;
   max-width: 42rem;
-  overflow: scroll;
+  overflow: auto;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
   position: relative;
 }
 
+/* Styling the scrollbar */
+.box::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+.box::-webkit-scrollbar-thumb {
+  background-color: var(--color-text-dark); /* Color of the scrollbar thumb */
+  border-radius: 6px; /* Radius of the scrollbar thumb */
+}
+
+.box::-webkit-scrollbar-track {
+  background-color: var(--color-primary); /* Color of the scrollbar track */
+  border-radius: 6px; /* Radius of the scrollbar track */
+}
 .loader {
   text-align: center;
   text-transform: uppercase;
